tests/parser/var-statement-expression-error.stderr
error: expected expression
 --> $DIR/var-statement-expression-error.lox:1:9
  |
1 | var x = ;
  |         ^
